hack/skaffold/virtual-kubelet/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: vkubelet-browser
spec:
  containers:
    - name: vkubelet-browser
      image: virtual-kubelet
      # "IfNotPresent" is used to prevent Minikube from trying to pull from the registry (and failing) in the first place.
      imagePullPolicy: IfNotPresent
      args:
        - /virtual-kubelet
        - --nodename
        - vkubelet-browser
        - --provider
        - browser
        - --provider-config
        - /vkubelet-browser-cfg.json
        - --startup-timeout
        - 10s
        - --klog.v
        - "2"
        - --klog.logtostderr
        - --log-level
        - debug
  serviceAccountName: virtual-kubelet
