hack/skaffold/virtual-kubelet/service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: vkubelet-browser
  name: vkubelet-browser
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: vkubelet-browser
status:
  loadBalancer: {}
